[project]
name = "gpu-listener-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "ipywidgets>=8.1.8",
    "json-numpy>=2.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy<2",
    "pydantic>=2.13.3",
    "rich>=15.0.0",
    "simpleitk==2.3.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]
[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"
